# library-fastapi-back

./: pyproject.toml
src/: main.py
src/api_v1/: __init__.py
src/api_v1/books/: __init__.py  model.py  router.py  schemas.py
src/api_v1/client/: __init__.py  model.py  router.py  schemas.py
src/api_v1/distribution/: __init__.py  model.py  router.py  schemas.py
src/api_v1/reservation/: __init__.py  model.py  router.py  schemas.py
src/config/: __init__.py  base_model.py  database.py  project_config.py
src/migrations/: env.py
src/migrations/versions/: 64c9e128b8d7_.py  b4fc190a5741_.py  fa3d9c5c407c_.py
